--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h3>How to play:<br><br>1.Type a number in the input field then press
       enter.<br>2. If the number is divisible by 3 then you get a "ping".
       <br>If the number is divisible by 5 you get a "pong". If the number is
-      divisible by 15 then you get a "pingpong".<br> 3.Your number will display
-      each number counting up to the numbers that lead up to the one you
-      chose and show which in the sequence are "ping", "pong", or "pingpong".
+      divisible by 15 then you get a "pingpong".<br> 3.The number you enter will
+      result in the display of each number counting up to the number you chose
+      and show which numbers in the sequence are "ping", "pong", or "pingpong".
       <br>4. This game can help you refine and test your skills in division.
       Can you predict what the sequence will be?
       </h3>
